# helix-kanban

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIALOG_SYSTEM.md  FILE_PATH_FIX.md  HELP_SYSTEM.md  KEYBOARD_FIX.md  KEYBOARD_SHORTCUT_FIX.md  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  QUICK_START.md  RATATUI_MIGRATION.md  SHORTCUT_FIX_SUMMARY.md  STATUS.md  TASK_OPERATIONS.md  UI-IMPROVEMENTS.md  UNICODE_FIX.md  USER_GUIDE.md  install-claude.sh  readme.md  run.sh  test_run.sh  test_shortcuts.md  todo.md
.github/workflows/: ci.yml  release.yml
.kanban/: .kanban.toml
.kanban/todo/: 001.md
homebrew/: helix-kanban.rb
homebrew-tap/: README.md
homebrew-tap/Formula/: helix-kanban.rb
mcp-server/: README.md  index-v1-final.js  index-v2-backup.js  index-v3.js  index.js  mcp-config.example.json  package.json
mcp-server-rs/: Cargo.toml  README.md
mcp-server-rs/src/: main.rs
src/: app.rs  cli.rs  config.rs  error.rs  ime.rs  main.rs  mcp.rs  state.rs
src/core/: mod.rs
src/fs/: mod.rs  parser.rs  project.rs  status.rs  task.rs
src/input/: command_registry.rs  commands.rs  keybindings.rs  keyboard.rs  mod.rs
src/models/: mod.rs  project.rs  status.rs  task.rs
src/ui/: board.rs  command_completion.rs  command_menu.rs  components.rs  dialogs.rs  grid.rs  help.rs  kanban.rs  layout.rs  list.rs  mod.rs  preview.rs  sidebar.rs  statusbar.rs  tags.rs  text_input.rs  welcome.rs
