[package]
name = "helix-kanban"
version = "0.2.4"
edition = "2021"
authors = ["Ruzaji Yasin <menzil@live.cn>"]
description = "A terminal-based kanban board with file-based storage, multi-project support, and Helix-style keybindings"
readme = "README.md"
homepage = "https://github.com/menzil/helix-kanban"
repository = "https://github.com/menzil/helix-kanban"
license = "MIT OR Apache-2.0"
keywords = ["kanban", "todo", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]
exclude = [
    ".kanban/",
    "*.md",
    "!README.md",
    "*.pdf",
    "*.sh",
    "*.bak",
    "src/ui/board.rs",
]

[[bin]]
name = "hxk"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
chrono = "0.4"
directories = "5.0"
anyhow = "1.0"
