[package]
name = "helix-kanban"
version = "0.2.17"
edition = "2024"
authors = ["Ruzaji Yasin <menzil@live.cn>"]
description = "A terminal-based kanban board with file-based storage, multi-project support, and Helix-style keybindings"
readme = "README.md"
homepage = "https://github.com/menzil/helix-kanban"
repository = "https://github.com/menzil/helix-kanban"
license = "MIT OR Apache-2.0"
keywords = ["kanban", "todo", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]
exclude = [
    ".kanban/",
    "*.md",
    "!README.md",
    "*.pdf",
    "*.sh",
    "*.bak",
    "src/ui/board.rs",
]

[[bin]]
name = "hxk"
path = "src/main.rs"

[features]
default = ["clipboard"]
clipboard = ["arboard"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Utilities
chrono = "0.4"
anyhow = "1.0"
arboard = { version = "3.4", default-features = false, optional = true }  # Clipboard support (text only)
