[package]
name = "helix-kanban-mcp"
version = "1.0.0"
edition = "2021"
authors = ["Ruzaji Yasin <menzil@live.cn>"]
description = "MCP server for helix-kanban"

[[bin]]
name = "helix-kanban-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
